feat: As a Security Server Administrator I want to be able to define what policy is used for choosing TSA-s and OCSP responders so that I can better manage costs
minor refacto

refs: XRDDEV-2980